# pymusik

./: .gitignore  README.md  USAGE.md  pyproject.toml
examples/: drum_example.py  heavy_phonk.py  lofi_demo.py  phonk_demo.py  production_master.py  ultimate_showcase.py
pymusic/composition/: pattern.py
pymusic/core/: constants.py  time.py
pymusic/engine/: renderer.py
pymusic/instruments/: base.py  lofi.py  phonk.py  piano.py  pro.py
pymusik/: __init__.py
pymusik/composition/: chord.py
pymusik/core/: events.py  pitch.py
pymusik/effects/: distortion.py
pymusik/engine/: audio_graph.py  renderer.py
pymusik/instruments/: drums.py  phonk.py  pro.py  synth.py
pymusik/output/: audio.py  midi.py
pymusik/synthesis/: envelopes.py  filters.py  oscillators.py
pymusik/utils/: math.py
