[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymusic"
version = "0.1.0"
description = "a python music engine, that can make music using code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "mido>=1.2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "mypy",
]
